--- a/style.css
+++ b/style.css
@@ -127,3 +127,156 @@ header {
     margin-left: 575px;
     margin-top: 10px;
 }
+
+.explore h1 {
+    color: black;
+    font-family: "Sansita Swashed";
+    font-size: 40px;
+    margin-top: 40px;
+    text-align: center;
+    font-weight: 600;
+}
+
+
+.explore-nav {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.explore-nav .active-2 {
+    border-bottom: 3px solid #933C24;
+}
+
+.explore-imgs {
+    display: grid;
+    grid-template-columns: 270px 270px 270px;
+    grid-template-rows: 270px 270px;
+    justify-content: center;
+    margin-top: 70px;
+    column-gap: 3px;
+    row-gap: 15px;
+}
+
+
+/* about */
+
+.about-img {
+    background-image: url(img/expolre/panner2.png);
+    background-position: left;
+    width: 100%;
+    height: 50vh;
+    margin-top: 80px;
+    text-align: center;
+}
+
+
+.about-img h1 {
+     font-family: "Sansita Swashed";
+    font-weight: 400;
+    color: white;
+    padding-top: 55px;
+    font-size: 40px;
+}
+
+.about-img p {
+    text-align: center;
+    color: #f0f0f0;
+    margin-top: 24px;
+}
+
+.btn-about-img button {
+    padding: 8px 18px;
+    border: none;
+    background-color: #933C24;
+    color: white;
+    border-radius: 5px;
+    margin-top: 14px;
+}
+
+
+.Featured h1 {
+    color: black;
+    font-family: "Sansita Swashed";
+    font-size: 40px;
+    margin-top: 40px;
+    text-align: center;
+    font-weight: 600;
+}
+
+
+.featured-img {
+    display: flex;
+    justify-content: center;
+    margin-top: 60px;
+    gap: 5rem;
+}
+
+
+.img-box-text {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+
+/* foter page */
+
+footer{
+    background-image: url(img/footer/foter-img.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 80vh;
+    margin-top: 50px;
+}
+
+.footer-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 5rem;
+    align-items: center;
+}
+
+.icons {
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+
+.icons h3 {
+    color: #E9BD8D;
+}
+
+
+.foter-about h3 {
+    color: #E9BD8C;
+    font-size: 26px;
+}
+
+.foter-about p {
+    color: white;
+    margin-top: 10px;
+}
+
+
+.recent-h3 {
+    color: #E9BD8C;
+    font-size: 26px;
+}
+
+.about-footer-control {
+    display: flex;
+    justify-content: center;
+    gap: 10rem;
+    margin-top: 30px;
+}
+
+.new {
+    display: flex;
+    gap: 1rem;
+    color: white;
+    margin-top: 10px;
+}
