--- a/style.css
+++ b/style.css
@@ -280,3 +280,178 @@ footer{
     color: white;
     margin-top: 10px;
 }
+
+
+
+@media (max-width: 600px) {
+    .nav {
+    display: none;
+}
+
+.hero-text {
+    margin: 50px 8px;
+}
+
+.blog-img {
+    display: grid;
+    grid-template-columns: 270px ;
+    grid-template-rows: 270px 270px;
+    justify-content: center;
+    margin-top: 70px;
+    column-gap: 3px;
+    row-gap: 15px;
+}
+
+.explore-nav {
+    display: grid;
+    grid-template-columns: 50px 50px 50px;
+    grid-template-rows: 50px 50px;
+    
+    
+}
+
+.btn-panner button {
+    padding: 8px 18px;
+    border: none;
+    background-color: #933C24;
+    color: white;
+    border-radius: 5px;
+    margin-left: 130px;
+    margin-top: 10px;
+}
+
+.explore-imgs {
+    display: grid;
+    grid-template-columns: 270px ;
+    grid-template-rows: 270px 270px;
+    justify-content: center;
+    margin-top: 70px;
+    column-gap: 3px;
+    row-gap: 15px;
+}
+
+.featured-img {
+    display: grid;
+    grid-template-columns: 230px ;
+    grid-template-rows: 230px ;
+    justify-content: center;
+    margin-top: 60px;
+    gap: 2rem;
+}
+
+.footer-header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0;
+    align-items: center;
+}
+
+.about-footer-control {
+    display: grid;
+    grid-template-columns: 100px 100px;
+    grid-template-rows: 100px 100px;
+}
+
+footer {
+    background-image: url(img/footer/foter-img.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 110vh;
+    margin-top: 50px;
+    
+}
+}
+
+
+
+@media (min-width: 768px) and (max-width:1023px) {
+    .nav {
+    display: none;
+    
+}
+
+.blog-img {
+    display: grid;
+    grid-template-columns: 270px 270px;
+    grid-template-rows: 270px 270px;
+    justify-content: center;
+    margin-top: 70px;
+    column-gap: 3px;
+    row-gap: 15px;
+}
+
+.panner {
+    background-image: url(img/blog/panner.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 50vh;
+    margin-top: 80px;
+}
+
+.panner h1 {
+    font-family: "Sansita Swashed";
+    font-weight: 400;
+    color: #933C24;
+    padding-top: 100px;
+}
+
+.btn-panner button {
+    padding: 8px 18px;
+    border: none;
+    background-color: #933C24;
+    color: white;
+    border-radius: 5px;
+    margin-left: 330px;
+    margin-top: 10px;
+}
+
+.explore-imgs {
+    display: grid;
+    grid-template-columns: 270px 270px ;
+    grid-template-rows: 270px 270px;
+    justify-content: center;
+    margin-top: 70px;
+    column-gap: 3px;
+    row-gap: 15px;
+}
+
+
+.about-img {
+    background-image: url(img/expolre/panner2.png);
+    background-position: left;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 50vh;
+    margin-top: 80px;
+    text-align: center;
+}
+
+.about-img h1 {
+    font-family: "Sansita Swashed";
+    font-weight: 400;
+    color: white;
+    padding-top: 100px;
+    font-size: 40px;
+}
+
+.featured-img {
+    display: grid;
+    grid-template-columns: 230px 230px;
+    grid-template-rows: 230px 230px;
+    justify-content: center;
+    margin-top: 60px;
+    gap: 5rem;
+}
+
+.about-footer-control {
+    display: grid;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 100px 100px;
+    justify-content: center;
+    
+    margin-top: 30px;
+}
+}
